# boilerPlateTest

./: .env.example  .gitignore  PACKAGING_GUIDE.md  PLAN_DOCS.md  TASKS_GUIDE.md  build.py  eg_build_self_update.py  pyproject.toml  readme.md
eg_agent/: __init__.py  auto_updater.py  build_cli.py  build_macos_installer.py  build_windows_installer.py  cli.py  constants.py  db.py  loader.py  log_config.py  paths.py  queue.py  registry.py  self_update.py  server.py  tray.py  worker.py
eg_agent/templates/: __init__.py  build_macos.sh  build_windows.bat  eg_agent_standalone.py
installer_helper/: __init__.py  main.py
